Move button alignment fix into correct object/partial.

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -55,14 +55,6 @@ table {
         border-top: 2px solid $table-border-color;
     }
 
-    .btn {
-        &,
-        &:hover:not(:disabled) {
-            margin: 8px 0 9px;
-            vertical-align: top;
-        }
-    }
-
 }
 
 .table--bordered {
